--- a/public/assets/css/website.css
+++ b/public/assets/css/website.css
@@ -1,51 +1,108 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.main{
-    width: 100%;
-    height: 1000px;
-    background-position: center;
-    background-size: cover;
-    background: linear-gradient(to bottom, rgb(0, 0, 0)30%, rgb(62, 0, 88));
+.main {
+  width: 100%;
+  height: 1000px;
+  background-position: center;
+  background-size: cover;
+  flex-shrink: 1;
+  background: linear-gradient(to bottom, rgb(0, 0, 0) 30%, rgb(62, 0, 88));
 }
-.navbar{
-    width: 100%;
-    height: 150px;
+.navbar {
+  width: 100%;
+  height: 150px;
+  display: flex;
+  flex-wrap: nowrap;
 }
-.headname h1{
-    font-family: arial;
-    font-size: 40px;
-    float: left;
-    padding-left: 600px;
-    padding-top: 50px;
-    color: white;
+.headname h1 {
+  font-family: arial;
+  font-size: 40px;
+  float: left;
+  padding-left: 600px;
+  padding-top: 50px;
+  color: white;
 }
-.menu{
-    width: 400px;
-    height: 75px;
-    float: right;
-    padding-right: 700px;
+.menu {
+  width: 400px;
+  height: 75px;
+  float: right;
+  padding-right: 700px;
 }
-ul{
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+ul {
+  float: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-ul li{
-    list-style: none;
-    margin-left: 50px;
-    padding-top: 70px;
-    font-size: 20px;
+ul li {
+  list-style: none;
+  margin-left: 50px;
+  padding-top: 70px;
+  font-size: 20px;
 }
-ul li a{
-    text-decoration: none;
-    font-family: Arial;
-    font-weight: bold;
-    transition: 0.25s ease-in-out;
-    color: white;
+ul li a {
+  text-decoration: none;
+  font-family: Arial;
+  font-weight: bold;
+  transition: 0.25s ease-in-out;
+  color: white;
 }
-ul li a:hover{
-    color: yellow;
+ul li a:hover {
+  color: yellow;
+}
+
+/*about menu*/
+
+.dropdown-about {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 20px;
+}
+
+.dropdown-about a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+.about-dropdown a {
+  display: flex;
+}
+
+.about-btn:hover .dropdown-about {
+  display: block;
+}
+
+/*shop menu*/
+
+.dropdown-shop {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-shop a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.about-shop a {
+  display: flex;
+}
+
+.shop-btn:hover .dropdown-shop {
+  display: block;
 }
