--- a/public/assets/css/website.css
+++ b/public/assets/css/website.css
@@ -1,108 +1,91 @@
-* {
-  margin: 0;
-  padding: 0;
+*{
+    margin: 0;
+    padding: 0;
 }
-.main {
-  width: 100%;
-  height: 1000px;
-  background-position: center;
-  background-size: cover;
-  flex-shrink: 1;
-  background: linear-gradient(to bottom, rgb(0, 0, 0) 30%, rgb(62, 0, 88));
+.main{
+    width: 100%;
+    height: 1000px;
+    background-position: center;
+    background-size: cover;
+    background: linear-gradient(to bottom, rgb(0, 0, 0)40%, #5d5491);
 }
-.navbar {
-  width: 100%;
-  height: 150px;
-  display: flex;
-  flex-wrap: nowrap;
+.navbar{
+    width: 100%;
+    height: 150px;
 }
-.headname h1 {
-  font-family: arial;
-  font-size: 40px;
-  float: left;
-  padding-left: 600px;
-  padding-top: 50px;
-  color: white;
+.headname h1{
+    font-family: arial;
+    font-size: 40px;
+    float: left;
+    padding-left: 500px;
+    padding-top: 50px;
+    color: white;
 }
-.menu {
-  width: 400px;
-  height: 75px;
-  float: right;
-  padding-right: 700px;
+.menu{
+    width: 400px;
+    height: 75px;
+    float: right;
+    padding-right: 600px;
 }
-ul {
-  float: left;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+ul{
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-ul li {
-  list-style: none;
-  margin-left: 50px;
-  padding-top: 70px;
-  font-size: 20px;
+ul li{
+    list-style: none;
+    margin-left: 50px;
+    padding-top: 70px;
+    font-size: 20px;
 }
-ul li a {
-  text-decoration: none;
-  font-family: Arial;
-  font-weight: bold;
-  transition: 0.25s ease-in-out;
-  color: white;
+ul li a{
+    text-decoration: none;
+    font-family: Arial;
+    font-weight: bold;
+    transition: 0.25s ease-in-out;
+    color: white;
 }
-ul li a:hover {
-  color: yellow;
+ul li a:hover{
+    color: yellow;
 }
-
-/*about menu*/
-
-.dropdown-about {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  border-radius: 20px;
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-.dropdown-about a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
+.content h1{
+    text-align: center;
+    justify-content: center;
+    border-bottom: 2px solid white;
+    border-top: 2px solid white;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: 20px;
+    font-family: arial;
+    font-size: 50px;
+    margin-left: auto;
+    margin-right: auto;
 }
-.about-dropdown a {
-  display: flex;
+.content h2{
+    text-align: center;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: arial;
+    font-size: 25px;
+    padding-top: 20px;
 }
-
-.about-btn:hover .dropdown-about {
-  display: block;
-}
-
-/*shop menu*/
-
-.dropdown-shop {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown-shop a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.about-shop a {
-  display: flex;
-}
-
-.shop-btn:hover .dropdown-shop {
-  display: block;
+.content p{
+    text-align: center;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: arial;
+    font-size: 20px;
+    padding-top: 20px;
 }
