--- a/public/assets/css/design1.css
+++ b/public/assets/css/design1.css
@@ -20,21 +20,37 @@ body {
     width: 900px;
     box-shadow: 0 10px 25px (rgba(0, 0, 0, 0.1));
     overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    height: 575px;
 
 }
 
 .leftside{
-    background: linear-gradient(135deg #ffffff #2a2b51);
-    padding: 40px 60px;
+    background: linear-gradient(225deg, #ffffff, #2a2b51);
+    padding: 0 40px;
     margin-bottom: 10px;
-    flex: 1;
     flex-direction: column;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    margin: auto;
+    text-align: center;
 }
 
 .Signup {
     flex: 2;
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+h2{
+    text-align: center;
 }
 
 .signup-form{
@@ -58,14 +74,14 @@ body {
 }
 
 .form input{
-    width: 50%;
+    width: 100%;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
     text-align: center;
-    font-size: 10px;
+    font-size: 20px;
 }
 
 .form input:focus{
@@ -76,10 +92,15 @@ body {
 .btn{
     background: #2a2b51;
     color: white;
+    border-radius: 25px;
+    width: 100%;
 }
 
 .Login-link{
     justify-content: center;
     align-items: center;
     color: #555;
+    margin-top: 10px;
+    font-size: 10px;
+    text-align: center;
 }
