--- a/public/assets/css/design2.css
+++ b/public/assets/css/design2.css
@@ -20,13 +20,29 @@ body {
     width: 900px;
     box-shadow: 0 10px 25px (rgba(0, 0, 0, 0.1));
     overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    height: 575px;
 
 }
 
+.logo img{
+    width: 100px;
+    height: auto;
+}
+
+h3{
+    font-size: 50px;
+}
+
 .Login {
-    flex-wrap: 2;
+    flex: 2;
     display: flex;
-    flex-direction: column
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    
 }
 
 .form{
@@ -34,6 +50,8 @@ body {
     flex-direction: column;
     margin: 10px;
     border-radius: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 .form label{
@@ -52,7 +70,7 @@ body {
     flex-direction: column;
     margin-bottom: 10px;
     text-align: center;
-    font-size: 10px;
+    font-size: 20px;
 }
 
 .form input:focus{
@@ -60,9 +78,21 @@ body {
     outline: none;
 }
 
-.btn{
+.btn1{
     background: #2a2b51;
     color: white;
+    border-radius: 25px;
+    width: 100%;
+    margin: auto;
+    ;
+}
+
+.btn2{
+    background: #2a2b51;
+    color: white;
+    border-radius: 25px;
+    width: 50%;
+    margin-top: 50px;
 }
 
 .Login-link{
@@ -72,9 +102,17 @@ body {
 }
 
 .rightside{
-    background-color: linear-gradient(135deg #ffffff #2a2b51);
-    padding: 40px 60px;
+    background: linear-gradient(135deg, #ffffff, #2a2b51);
+    padding: 0 40px;
     margin-bottom: 10px;
     flex-direction: column;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    margin: auto;
+    text-align: center;
 }
+
 
