--- a/public/assets/css/website.css
+++ b/public/assets/css/website.css
@@ -52,7 +52,7 @@ ul li a {
   color: white;
 }
 ul li a:hover {
-  color: yellow;
+  color: #5d5491;
 }
 .content {
   object-fit: fill;
@@ -62,6 +62,7 @@ ul li a:hover {
   align-items: center;
   margin-left: auto;
   margin-right: auto;
+  border: 1px solid white;
 }
 .content h1 {
   text-align: center;
@@ -96,44 +97,80 @@ ul li a:hover {
   padding-top: 20px;
 }
 .mid-part{
-  width: 100%;
   height: 1000px;
   background-color: black;
 }
-.mid-part p{
+.mid-text{
+  width: 75%;
+  border: 1px solid white;
   text-align: center;
+  align-items: center;
+  margin: auto;
+}
+.mid-part h1{
+  text-align: justify;
+  float: left;
   color: white;
-  margin-left: auto;
-  margin-right: auto;
   font-family: arial;
-  font-size: 30px;
-  padding-top: 20px;
+  font-size: 50px;
+}
+.mid-part p{
+  text-align: justify;
+  float: left;
+  color: white;
+  font-family: arial;
+  font-size: 20px;
+}
+.mid-part img{
+  float: right;
+  width: 750px;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-top: 20px;
 }
 .bot-part{
-  width: 100%;
   height: 850px;
   background: linear-gradient(to bottom, rgb(0,0,0)1%, #5d5491);
 }
+.bot-text{
+  width: 75%;
+  border: 1px solid white;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+}
+.bot-part h1{
+  text-align: justify;
+  float: right;
+  color: white;
+  font-family: arial;
+  font-size: 50px;
+}
 .bot-part p{
-    text-align: center;
-    color: white;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: arial;
-    font-size: 30px;
-    padding-top: 20px;
+  text-align: justify;
+  float: right;
+  color: white;
+  font-family: arial;
+  font-size: 20px;
+}
+.bot-part img{
+  float: left;
+  width: 750px;
+  height: 500px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-top: 20px;
 }
 .footer{
   width: 100%;
   height: 150px;
   background-color: black;
+  border: 1px solid white;
 }
 .footer p{
-  text-align: center;
+  text-align: left;
   color: white;
-  margin-left: auto;
-  margin-right: auto;
   font-family: arial;
   font-size: 30px;
-  padding-top: 20px;
 }
