--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,53 +1,195 @@
-body {
-    background: linear-gradient(rgb(0, 0, 0), rgb(135, 0, 153));
-    background-repeat: no-repeat;
-}
-
-.drop-down {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-.drop-items {
-    display: none;
-    position: absolute;
-    z-index: 99;
-    top: 50%;
-    color:black;
+* {
+    margin: 0;
+    padding: 0;
+  }
+  body {
     display: flex;
     flex-direction: column;
-}
+    animation: slow-reveal linear;
+    animation-timeline: view();
+    animation-range: 0% cover 20%;
+  }
 
-.test-item{
-    width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-}
-
-.item {
-    text-decoration: none;
-    color:white;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-}
-
-.item:hover {
-    width: 100%;
-    height: 100%;
-    background-color: black;
-}
-
-.item:hover .drop-items {
-}
-
-@keyframes scroll-down {
+  @keyframes slow-reveal {
     from {
-        transform: translateY(20%);
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+  }
+  
+  .top-part {
+    width: 100%;
+    height: 1000px;
+    background-position: center;
+    background-size: cover;
+    background-image: url('../images/space.jpg');
+    background-repeat: no-repeat;
+  }
+  .bgpic {
+    width: 100%;
+    height: 1000px;
+    background-position: center;
+    background-size: cover;
+    background: linear-gradient(to bottom, transparent, rgb(0, 0, 0));
+  }
+  .navbar {
+    display: flex;
+    height: 150px;
+    margin: auto;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .headname h1 {
+    font-family: arial;
+    font-size: 40px;
+    float: left;
+    color: white;
+  }
+  ul {
+    float: right;
+    display: flex;
+  }
+  ul li {
+    list-style: none;
+    margin-left: 50px;
+    font-size: 20px;
+  }
+  ul li a {
+    text-decoration: none;
+    font-family: Arial;
+    font-weight: bold;
+    transition: 0.25s ease-in-out;
+    color: white;
+  }
+  ul li a:hover {
+    color: #5d5491;
+  }
+  .content {
+    object-fit: fill;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .content h1 {
+    text-align: center;
+    justify-content: center;
+    border-bottom: 2px solid white;
+    border-top: 2px solid white;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: 20px;
+    font-family: arial;
+    font-size: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .content h2 {
+    text-align: center;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: arial;
+    font-size: 30px;
+    padding-top: 20px;
+  }
+  .content p {
+    text-align: center;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: arial;
+    font-size: 20px;
+    padding-top: 20px;
+  }
+  .mid-part{
+    height: 1000px;
+    background-color: black;
+  }
+  .mid-text{
+    width: 75%;
+    border: 1px solid white;
+    text-align: center;
+    align-items: center;
+    margin: auto;
+  }
+  .mid-part h1{
+    text-align: justify;
+    float: left;
+    color: white;
+    font-family: arial;
+    font-size: 50px;
+  }
+  .mid-part p{
+    text-align: justify;
+    float: left;
+    color: white;
+    font-family: arial;
+    font-size: 20px;
+  }
+  .mid-part img{
+    float: right;
+    width: 750px;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: 20px;
+  }
+  .bot-part{
+    height: 850px;
+    background: linear-gradient(to bottom, rgb(0,0,0)1%, #5d5491);
+  }
+  .bot-text{
+    border: 1px solid white;
+    width: 75%;
+    text-align: center;
+    align-items: center;
+    margin: auto;
+  }
+  .bot-part h1{
+    text-align: justify;
+    float: right;
+    color: white;
+    font-family: arial;
+    font-size: 50px;
+  }
+  .bot-part p{
+    text-align: right;
+    float: right;
+    color: white;
+    font-family: arial;
+    font-size: 20px;
+  }
+  .bot-part img{
+    float: left;
+    width: 750px;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: 20px;
+  }
+  .footer{
+    width: 100%;
+    height: 150px;
+    background-color: black;
+  }
+  .footer p{
+    text-align: center;
+    color: white;
+    font-family: arial;
+    font-size: 30px;
+  }
+
+@keyframes dropDown {
+    from {
+        transform: translateY(-10%);
         opacity: 0;
     }
 
@@ -55,4 +197,76 @@ body {
         transform: translateY(0);
         opacity: 1;
     }
+}
+
+
+/*about menu*/
+.about-btn {
+    position: relative;
+    border: 2px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dropdown-about {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 20px;
+  top: 100%;
+  animation: dropDown 1s;
+}
+
+.dropdown-about a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+.about-dropdown a {
+  display: flex;
+}
+
+.about-btn:hover .dropdown-about {
+  display: block;
+}
+
+/*shop menu*/
+
+.dropdown-shop {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-shop a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.about-shop a {
+  display: flex;
+}
+
+.shop-btn:hover .dropdown-shop {
+  display: block;
+}
+
+.account-transition {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    transform: translateY(-100%);
+    transition: transform 0.5s linear;
 }
